--- a/Html/index.html
+++ b/Html/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css"
+    <link rel="stylesheet" type="text/css" href="./Portfolio/assets/css/style.css"
     <title>My Portfolio</title>
   </head>
   <body>
@@ -13,8 +13,8 @@
     </header>
     <div class="container">
       <div class="profile">
-        <img src="./assets/img/profileavatar.jpg" alt="Your Name" />
-        <h1>Your Name</h1>
+        <img src="./Portfolio/assets/img/Profileavatar.jpg" alt="Ai generated photo of me as a simpson" />
+        <h1>Kyle Sunman</h1>
         <p>Web Developer & Designer</p>
       </div>
       <div class="description">
